updated index.html,work.html,skills.html, CSS and js files

--- a/index.html
+++ b/index.html
@@ -76,73 +76,39 @@
         >
       </div>
     </div>
+    
+
     <p class="text-center m-5">
       Featured Project which my best projects be choice to show
     </p>
     <div class="container">
-      <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img
-            src="images/Techno Champ Tours.png"
-            class="img-fluid"
-            alt="Tourism website preview"
-          />
+      <div class="row">
+        <div class="col-md-6">
+          <div class="col d-none d-lg-block">
+          <div class="highlights">
+            <p><span class="number">4</span> Programmming Languages</p>
+            <p><span class="number">5</span> Development Tools</p>
+            <p><span class="number">1</span> Year of experience</p>
+          </div>
+          </div>
         </div>
-        <div class="col">
+  
+        <div class="col-md-6">
           <div class="project-description">
-            <h2 class="mb-5">Tourism Website</h2>
             <p class="mb-4 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Solving complex problems and finding creative solutions are what drive me. 
+              I thrive in environments where i can tackle challenges and find innovative 
+              ways to overcome them. 
+              Collaborating and achieving common goals as a team is what energizes me.
+              I help business grow by crafting amazing web experiences.
+              If you are looking for a developer that likes to get stuff done,
             </p>
-            <a href="work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
-      <div class="row mb-5">
-        <div class="col">
-          <div class="project-description">
-            <h2 class="mb-5">Portfolio Project</h2>
-            <p class="mb-4 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="work.html" class="btn btn-branding-outline">Learn more</a>
-          </div>
-        </div>
-        <div class="col d-none d-lg-block">
-          <img
-            src="images/Portfolio.png"
-            class="img-fluid"
-            alt="Weather project preview"
-          />
-        </div>
-      </div>
-      <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img
-            src="images/dictionary.png"
-            class="img-fluid"
-            alt="Dictionary app preview"
-          />
-        </div>
-        <div class="col">
-          <div class="project-description">
-            <h2 class="mb-5">Decor Website</h2>
-            <p class="mb-4 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="work.html" class="btn btn-branding-outline">Learn more</a>
-          </div>
-        </div>
-      </div>
+
+      
+
       <footer>
         <div class="d-flex justify-content-center mb-5">
           <a
