--- a/skills.html
+++ b/skills.html
@@ -62,23 +62,23 @@
         </ul>
       </nav>
     </div>
-    <hr>
+    
     <div class="content-container container">
       <div class="content">
       
         <h1 class="mb-5">I am striving to never stop learning!</h1>
 
-        <div class="row">
-          <div class="col-md-6">
+        <div class="skills">
+          <div class="languages">
             <div class="html">
               <span class="icon icon1"><a href="//www.shecodes.io/certificates/e75cf4dca40ad94fe6fe6750e9a60232"><i class="fa-brands fa-html5"></i></a></span>
               <span class="icon-name"><p>HTML</p></span>
-             </div>
-             <div class="css">
+            </div>
+            <div class="css">
               <span class="icon icon2"><a href="https://shecodes.io/certificates/348fb8adab7e9801f1c7b93b1f20a05e"><i class="fa-brands fa-css3-alt"></i></a></span>
               <span class="icon-name name2"><p>CSS</p></span> 
-             </div>
-             <div class="js">
+            </div>
+            <div class="js">
               <span class="icon icon3"><a href="https://shecodes.io/certificates/622aefaa4c2a3f5a432b5463d17ffff9"><i class="fa-brands fa-js"></i></a></span>
               <span class="icon-name name3"><p>JS</p></span>
             </div>
@@ -86,11 +86,11 @@
               <span class="icon icon4"><a href="#"><i class="fa-brands fa-react"></i></a></span>
               <span class="icon-name name4"><p>REACT</p></span> 
             </div>
-            <div class="react">
+            <div class="node">
               <span class="icon icon4"><a href="#"><i class="fa-brands fa-node-js"></i></a></span>
               <span class="icon-name name4"><p>NODE</p></span> 
             </div>
-            <div class="react">
+            <div class="python">
               <span class="icon icon4"><a href="#"><i class="fa-brands fa-python"></i></a></span>
               <span class="icon-name name4"><p>PYTHON</p></span> 
             </div>
