--- a/work.html
+++ b/work.html
@@ -66,47 +66,67 @@
       <div class="content">
         <h1 class="mb-5">I had a pleasure of working with these awesome projects!</h1>
 
-        <div class="row">
-          <div class="col-md-6">
+        <div class="row mb-5">
+          <div class="col d-none d-lg-block">
             <img
               src="images/Techno Champ Tours.png"
-              alt="Tourism Website preview"
-              class="img-fluid mb-3 rounded"
+              class="img-fluid"
+              alt="Tourism website preview"
             />
-            <h3 class="text-center">Tourism Website</h3>
-            <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
           </div>
-
-          <div class="col-md-6">
-            <img
-              src="images/Portfolio.png"
-              alt="Weather project preview"
-              class="img-fluid mb-3 rounded"
-            />
-            <h3 class="text-center">Portfolio Project</h3>
-            <p class="text-center text-muted">
-              Built with HTML, CSS and JavaScript
-            </p>
+          <div class="col">
+            <div class="project-description">
+              <h2 class="mb-5">Tourism Website</h2>
+              <p class="mb-4 text-muted">
+                Far far away, behind the word mountains, far from the countries
+                Vokalia and Consonantia, there live the blind texts. Separated
+                they live in Bookmarksgrove right at the coast of the Semantics, a
+                large language ocean. A small river named Duden flows by
+              </p>
+              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6">
+        <div class="row mb-5">
+          <div class="col">
+            <div class="project-description">
+              <h2 class="mb-5">Portfolio Project</h2>
+              <p class="mb-4 text-muted">
+                Far far away, behind the word mountains, far from the countries
+                Vokalia and Consonantia, there live the blind texts. Separated
+                they live in Bookmarksgrove right at the coast of the Semantics, a
+                large language ocean. A small river named Duden flows by
+              </p>
+              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
+            </div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <img
+              src="images/Portfolio.png"
+              class="img-fluid"
+              alt="Weather project preview"
+            />
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col d-none d-lg-block">
             <img
               src="images/dictionary.png"
-              alt="Dictionary App"
-              class="img-fluid mb-3 rounded"
+              class="img-fluid"
+              alt="Dictionary app preview"
             />
-            <h3 class="text-center">Dictionary App</h3>
-            <p class="text-center text-muted">Built with HTML, CSS and React</p>
           </div>
-          <div class="col-md-6">
-            <img
-              src="images/translation.png"
-              alt="Translation App"
-              class="img-fluid mb-3 rounded"
-            />
-            <h3 class="text-center">Translation App</h3>
-            <p class="text-center text-muted">Built with HTML, CSS and React</p>
+          <div class="col">
+            <div class="project-description">
+              <h2 class="mb-5">Decor Website</h2>
+              <p class="mb-4 text-muted">
+                Far far away, behind the word mountains, far from the countries
+                Vokalia and Consonantia, there live the blind texts. Separated
+                they live in Bookmarksgrove right at the coast of the Semantics, a
+                large language ocean. A small river named Duden flows by
+              </p>
+              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
+            </div>
           </div>
         </div>
       </div>
