updated CSS file and Work and Skills files

--- a/skills.html
+++ b/skills.html
@@ -87,11 +87,11 @@
               <span class="icon-name name4"><p>REACT</p></span> 
             </div>
             <div class="node">
-              <span class="icon icon4"><a href="#"><i class="fa-brands fa-node-js"></i></a></span>
+              <span class="icon icon5"><a href="#"><i class="fa-brands fa-node-js"></i></a></span>
               <span class="icon-name name4"><p>NODE</p></span> 
             </div>
             <div class="python">
-              <span class="icon icon4"><a href="#"><i class="fa-brands fa-python"></i></a></span>
+              <a href="#"><i class="fa-brands fa-python"></i></a>
               <span class="icon-name name4"><p>PYTHON</p></span> 
             </div>
           </div>
