--- a/work.html
+++ b/work.html
@@ -73,10 +73,11 @@
               class="img-fluid"
               alt="Tourism website preview"
             />
+            <div class="overlay">Tourism Website<br><i><b></b></i></div>
           </div>
           <div class="col">
             <div class="project-description">
-              <h2 class="mb-5">Tourism Website</h2>
+              <h2 class="mb-5">Website Project</h2>
               <p class="mb-4 text-muted">
                 Far far away, behind the word mountains, far from the countries
                 Vokalia and Consonantia, there live the blind texts. Separated
@@ -104,8 +105,9 @@
             <img
               src="images/Portfolio.png"
               class="img-fluid"
-              alt="Weather project preview"
+              alt="Portfolio project preview"
             />
+            <div class="overlay">Portfolio<br><i><b></b></i></div>
           </div>
         </div>
         <div class="row mb-5">
@@ -113,8 +115,9 @@
             <img
               src="images/dictionary.png"
               class="img-fluid"
-              alt="Dictionary app preview"
+              alt="Decor project preview"
             />
+            <div class="overlay">Project<br><i><b></b></i></div>
           </div>
           <div class="col">
             <div class="project-description">
