added css ,js and html javascript

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="">
     <script src="script.js"></script>
     <title>Contact Thandokazi Notyalwa</title>
   </head>
@@ -66,43 +65,40 @@
     <div class="content-container container">
       <div class="content">
         <div class="row">
-        <div class="col-md-6">
-        <h1 class="mb-5">Let's get in touch!</h1>
-        <h3 class="mb-3">Email</h3>
-        <p class="mb-4">
-          <a href="mailto:thandonotyalwa@gmail.com "
-            >thandonotyalwa@gmail.com</a
-          >
-        </p>
-        <h3 class="mb-3">Twitter</h3>
-        <p class="mb-4">
-          <a href="https://www.twitter.com/thandonotyalwa" target="_blank"
-            >@thandonotyalwa</a
-          >
-        </p>
-        <h3 class="mb-3">Instagram</h3>
-        <p class="mb-4">
-          <a href="https://www.Instagram.com/thando.codes" target="_blank"
-            >@thando.codes</a
-          >
-        </p>
-        </div>
+          <div class="col-md-6">
+           <h1 class="mb-5">Let's get in touch!</h1>
+           <h3 class="mb-3">Email</h3>
+           <p class="mb-4">
+           <a href="mailto:thandonotyalwa@gmail.com "
+            >thandonotyalwa@gmail.com</a>
+           </p>
+           <h3 class="mb-3">Twitter</h3>
+           <p class="mb-4">
+           <a href="https://www.twitter.com/thandonotyalwa" target="_blank"
+            >@thandonotyalwa</a>
+           </p>
+           <h3 class="mb-3">Instagram</h3>
+           <p class="mb-4">
+           <a href="https://www.Instagram.com/thando.codes" target="_blank"
+            >@thando.codes</a>
+           </p>
+          </div>
       
-        <div class="col-md-6">
-          <form onsubmit="return validateForm()">
-           <label for="name">Full Name *</label>
-           <input type="text" placeholder="enter your name" id="name" name="name" oninput="validateName()" required>
-           <br>
-           <label for="email">Email *</label>
-           <input type="text" placeholder="enter your email" id="email"  name="email" oninput="validateEmail()" required>
-           <br>
-           <label>Leave a Message *</label>
-           <input type="text" placeholder="enter your message" required>
-           <br>
-           <button type="submit" value="submit" class="btn btn-branding">Submit</button>
-          </form>
+          <div class="col-md-6">
+            <form onsubmit="return validateForm()">
+             <label for="name">Full Name *</label>
+             <input type="text" placeholder="enter your name" id="name" name="name" oninput="validateName()" required>
+             <br>
+             <label for="email">Email *</label>
+             <input type="text" placeholder="enter your email" id="email"  name="email" oninput="validateEmail()" required>
+             <br>
+             <label>Leave a Message *</label>
+             <input type="text" placeholder="enter your message" required>
+             <br>
+             <button type="submit" value="submit" class="btn btn-branding">Submit</button>
+            </form>
+         </div>
         </div>
-      </div>
       </div>
     </div>
     <footer>
@@ -160,5 +156,6 @@
         >
       </p>
     </footer>
+    <button onclick="topFunction()" id="top" title="Go to top">&uarr;</button>
   </body>
 </html>
