--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="script.js">
+    <script src="script.js"></script>
     <title>My work</title>
   </head>
   <body>
@@ -188,5 +188,6 @@
         >
       </p>
     </footer>
+    <button onclick="topFunction()" id="top" title="Go to top">&uarr;</button>
   </body>
 </html>
