--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="script.js">
+    <script src="script.js"></script>
     <meta
       name="description"
       content="Thandokazi is a front-end engineer based in South Africa"
@@ -147,6 +147,7 @@
           >
         </p>
       </footer>
+      <button onclick="topFunction()" id="top" title="Go to top">&uarr;</button>
     </div>
   </body>
 </html>
