added images and updated some html files and css

--- a/about.html
+++ b/about.html
@@ -66,12 +66,12 @@
       <div class="row">
         <div class="col-md-6">
           <div class="content">
-            <h1 class="mb-4">Hi, I am Thandokazi Notyalwa</h1>
-            <h2 class="mb-4">Front-end Developer, based in Cape Town.</h2>
+            <h1 class="mb-4">Thandokazi Notyalwa</h1>
+            <h2 class="mb-4">Software Developer, based in Cape Town.</h2>
             <p class="mb-4">
-              My name is Thandokazi and i specialize in web development that utilizes HTML, CSS, JS and REACT etc.
+              I specialize in web development that utilizes HTML, CSS, JS and REACT etc.
               I am a highly motivated individual and external optimist dedicated to writing clear concise, 
-              robust code hat works, Striving to never stop learning and improving.
+              robust code that works, Striving to never stop learning and improving.
             </p>
             <p class="mb-5">
               Solving complex problems and finding creative solutions are what drive me.
@@ -110,14 +110,7 @@
           >
         </div>
       </div>
-      <div class="d-flex justify-content-center mb-5">
-        <a
-          href="mailto:thandonotyalwa@gmail.com"
-          class="email-link"
-          title="Email Thandokazi"
-          >thandonotyalwa@gmail.com</a
-        >
-      </div>
+     
       <div class="social-links text-center">
         <a
         href="https://www.github.com/thandokazi2000
@@ -139,7 +132,7 @@
       ></a>
       </div>
       <p class="text-center mt-4">
-        ✌🏾This website was coded by Thandokazi Notyalwa, and is
+        ✌🏾This Portfolio was coded by Thandokazi Notyalwa, and is
         <a
           href="https://github.com/Thandokazi2000/Portfolio-project"
           target="_blank"
