--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       name="description"
       content="Thandokazi is a front-end engineer based in South Africa"
     />
-    <title>Front-end developer - Thandokazi Notyalwa</title>
+    <title>Software developer - Thandokazi Notyalwa</title>
   </head>
   <body>
     <div class="container">
@@ -69,7 +69,7 @@
     <div class="hero">
       <p>👋🏾 Hello, I am</p>
       <h1>Thandokazi Notyalwa</h1>
-      <h2 class="mb-5">Front-end developer based in Cape Town</h2>
+      <h2 class="mb-5">Software developer based in Cape Town</h2>
       <div>
         <a href="contact.html" class="btn btn-branding" title="Contact me"
           >Contact me</a
@@ -79,14 +79,14 @@
     
 
     <p class="text-center m-5">
-      Featured Project which my best projects be choice to show
+      <!--Featured Project which my best projects be choice to show-->
     </p>
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <div class="col d-none d-lg-block">
+        <div class="col-md-4">
+          <div class="col ">
           <div class="highlights">
-            <p><span class="number">4</span> Programmming Languages</p>
+            <p><span class="number">5</span> Programmming Languages</p>
             <p><span class="number">5</span> Development Tools</p>
             <p><span class="number">1</span> Year of experience</p>
           </div>
@@ -103,6 +103,7 @@
               I help business grow by crafting amazing web experiences.
               If you are looking for a developer that likes to get stuff done,
             </p>
+            <a href="about.html" class="btn btn-branding-outline">See more</a>
           </div>
         </div>
       </div>
@@ -110,14 +111,6 @@
       
 
       <footer>
-        <div class="d-flex justify-content-center mb-5">
-          <a
-            href="mailto:thandonotyalwa@gmail.com"
-            class="email-link"
-            title="Email Thandokazi"
-            >thandonotyalwa@gmail.com</a
-          >
-        </div>
         <div class="social-links text-center">
           <a
           href="https://www.github.com/thandokazi2000
@@ -139,7 +132,7 @@
       ></a>
         </div>
         <p class="text-center mt-4">
-          ✌🏾This website was coded by Thandokazi Notyalwa, and is
+          ✌🏾This Portfolio was coded by Thandokazi Notyalwa, and is
           <a
             href="https://github.com/Thandokazi2000/Portfolio-project"
             target="_blank"
