--- a/skills.html
+++ b/skills.html
@@ -127,14 +127,6 @@
           >
         </div>
       </div>
-      <div class="d-flex justify-content-center mb-5">
-        <a
-          href="mailto:thandonotyalwa@gmail.com"
-          class="email-link"
-          title="Email Thandokazi"
-          >thandonotyalwa@gmail.com</a
-        >
-      </div>
       <div class="social-links text-center">
         <a
         href="https://www.github.com/thandokazi2000"
@@ -153,7 +145,7 @@
         <i class="fa-solid fa-envelope"></i></a>
       </div>
       <p class="text-center mt-4">
-        ✌🏾This website was coded by Thandokazi Notyalwa, and is
+        ✌🏾This Portfolio was coded by Thandokazi Notyalwa, and is
         <a
           href="https://github.com/Thandokazi2000/Portfolio-project"
           target="_blank"
