--- a/work.html
+++ b/work.html
@@ -67,66 +67,66 @@
         <h1 class="mb-5">I had a pleasure of working with these awesome projects!</h1>
 
         <div class="row mb-5">
-          <div class="col d-none d-lg-block">
-            <img
-              src="images/Techno Champ Tours.png"
-              class="img-fluid"
-              alt="Tourism website preview"
-            />
-            <div class="overlay">Tourism Website<br><i><b></b></i></div>
+          <div class="col cot">
+            <a href="#" target="_blank">
+              <img src="images/Techno Champ Tours.png" class="img-fluid" alt="Tourism website preview">
+              <div class="overlay">
+                <b>Tourism Website Preview</b><br>
+              </div>
+           </a> 
           </div>
-          <div class="col">
+          <div class="col d-none d-lg-block">
             <div class="project-description">
               <h2 class="mb-5">Website Project</h2>
-              <p class="mb-4 text-muted">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts. Separated
-                they live in Bookmarksgrove right at the coast of the Semantics, a
-                large language ocean. A small river named Duden flows by
+              <p class="mb-4 text-muted ">
+                Visually captivating tourism website,Crafted by a dedicated team using HTML, CSS, and JavaScript, 
+                our website is a testament to our shared vision and collective effort.
+                With seamless navigation, responsive design, 
+                and interactive elements.
               </p>
               <a href="work.html" class="btn btn-branding-outline">Learn more</a>
             </div>
           </div>
         </div>
         <div class="row mb-5">
-          <div class="col">
+          <div class="col d-none d-lg-block">
             <div class="project-description">
               <h2 class="mb-5">Portfolio Project</h2>
-              <p class="mb-4 text-muted">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts. Separated
-                they live in Bookmarksgrove right at the coast of the Semantics, a
-                large language ocean. A small river named Duden flows by
+              <p class="mb-4 text-muted ">
+                Portfolio Project, crafted by me using 
+                HTML, CSS, and JavaScript.With seamless navigation, responsive design, 
+                and interactive elements.
               </p>
               <a href="work.html" class="btn btn-branding-outline">Learn more</a>
             </div>
           </div>
-          <div class="col d-none d-lg-block">
-            <img
-              src="images/Portfolio.png"
-              class="img-fluid"
-              alt="Portfolio project preview"
-            />
-            <div class="overlay">Portfolio<br><i><b></b></i></div>
+          <div class="col cot">
+            <a href="https://github.com/Thandokazi2000/Portfolio-project" target="_blank" >
+              <img src="images/Portfolio.png" class="img-fluid" alt="Portfolio project preview">
+              <div class="overlay">
+                <b>Portfolio Preview</b><br>
+              </div>
+            </a>
           </div>
         </div>
+
         <div class="row mb-5">
-          <div class="col d-none d-lg-block">
-            <img
-              src="images/dictionary.png"
-              class="img-fluid"
-              alt="Decor project preview"
-            />
-            <div class="overlay">Project<br><i><b></b></i></div>
-          </div>
           <div class="col">
+            <a href="#" target="_blank">
+              <img src="images/Screenshot (1).png" class="img-fluid" alt="Decor project preview">
+              <div class="overlay">
+                <b>Decor Website Preview</b><br>
+              </div>
+            </a> 
+          </div>
+          <div class="col d-none d-lg-block">
             <div class="project-description">
               <h2 class="mb-5">Decor Website</h2>
-              <p class="mb-4 text-muted">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts. Separated
-                they live in Bookmarksgrove right at the coast of the Semantics, a
-                large language ocean. A small river named Duden flows by
+              <p class="mb-4">
+                Decor website,Crafted by a dedicated team using HTML, CSS, and JavaScript, 
+                our website is a testament to our shared vision and collective effort.
+                With seamless navigation, responsive design, 
+                and interactive elements.
               </p>
               <a href="work.html" class="btn btn-branding-outline">Learn more</a>
             </div>
@@ -151,14 +151,7 @@
           >
         </div>
       </div>
-      <div class="d-flex justify-content-center mb-5">
-        <a
-          href="mailto:thandonotyalwa@gmail.com"
-          class="email-link"
-          title="Email Thandokazi"
-          >thandonotyalwa@gmail.com</a
-        >
-      </div>
+      
       <div class="social-links text-center">
         <a
         href="https://www.github.com/thandokazi2000
@@ -180,7 +173,7 @@
       ></a>
       </div>
       <p class="text-center mt-4">
-        ✌🏾This website was coded by Thandokazi Notyalwa, and is
+        ✌🏾This Portfolio was coded by Thandokazi Notyalwa, and is
         <a
           href="https://github.com/Thandokazi2000/Portfolio-project"
           target="_blank"
