--- a/skills.html
+++ b/skills.html
@@ -83,22 +83,22 @@
         <a
         href="https://shecodes.io/certificates/622aefaa4c2a3f5a432b5463d17ffff9"
         target="_blank"
-        title="Gmail">
+        title="GitHub Profile">
         <i class="fa-brands fa-js"></i></a>
         <a
-        href="mailto:thandonotyalwa@gmail.com"
+        href="#"
         target="_blank"
-        title="Gmail">
+        title="GitHub Profile">
         <i class="fa-brands fa-react"></i></a>
         <a
-        href="mailto:thandonotyalwa@gmail.com"
+        href="#"
         target="_blank"
-        title="Gmail">
+        title="GitHub Profile">
         <i class="fa-brands fa-node-js"></i></a>
         <a
-        href="mailto:thandonotyalwa@gmail.com"
+        href="#"
         target="_blank"
-        title="Gmail">
+        title="GitHub Profile">
         <i class="fa-brands fa-python"></i></a>
       </div>
       </footer>
