--- a/contact.html
+++ b/contact.html
@@ -67,22 +67,22 @@
         <div class="row">
           <div class="col-md-6">
            <h1 class="mb-5">Let's get in touch!</h1>
-           <h3 class="mb-3">Email</h3>
+           <div class="social-links">
+           <h3 class="mb-4">Email</h3>
            <p class="mb-4">
            <a href="mailto:thandonotyalwa@gmail.com "
             ><i class="fa-solid fa-envelope"></i></a>
-            <a
-            href="mailto:thandonotyalwa@gmail.com"
-            target="_blank"
-            title="Gmail"
-            ></i
-           ></a>
            </p>
-           <h3 class="mb-3">LinkedIn</h3>
+           <h3 class="mb-4">LinkedIn</h3>
            <p class="mb-4">
-            <i class="fa-brands fa-linkedin"></i></a>
+            <a
+             href="https://www.linkedin.com/feed/"
+             target="_blank"
+             title="LinkedIn Profile"
+             ><i class="fa-brands fa-linkedin"></i>
+            </a>
            </p>
-           <h3 class="mb-3">GitHub</h3>
+           <h3 class="mb-4">GitHub</h3>
            <p class="mb-4">
             <a
             href="https://www.github.com/thandokazi2000
@@ -92,6 +92,7 @@
             ><i class="fa-brands fa-github"></i
            ></a>
            </p>
+          </div>
                
           </div>
       
