--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
+        <div class="hamburger-menu">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
         <a href="index.html" title="Homepage">
           <img
             src="images/logo.png"
@@ -47,7 +52,7 @@
             alt="Logo"
           />
         </a>
-        <ul>
+        <ul class="nav-links">
           <li>
             <a href="index.html" title="Homepage">Home</a>
           </li>
