--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,12 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap"
       rel="stylesheet"
     />
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  emailjs.init('service_fi3tymw');
+</script>
+
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
     <title>Contact Thandokazi Notyalwa</title>
@@ -97,15 +103,15 @@
           </div>
       
           <div class="col-md-6">
-            <form onsubmit="return validateForm()">
+            <form action="" id="contact-form">
              <label for="name">Full Name *</label>
-             <input type="text" placeholder="enter your name" id="name" name="name" oninput="validateName()" required>
+             <input type="text" placeholder="enter your name" id="name" name="user_name" oninput="validateName()" required>
              <br>
              <label for="email">Email *</label>
-             <input type="text" placeholder="enter your email" id="email"  name="email" oninput="validateEmail()" required>
+             <input type="email" placeholder="enter your email" id="email"  name="user_email" oninput="validateEmail()" required>
              <br>
              <label>Leave a Message *</label>
-             <input type="text" placeholder="enter your message" required>
+             <input type="text" id="contact-message" placeholder="enter your message" name="user_message" required>
              <br>
              <button type="submit" value="submit" class="btn btn-branding">Submit</button>
             </form>
