--- a/index.html
+++ b/index.html
@@ -14,16 +14,10 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/a04d21dfd1.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/a04d21dfd1.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
     <meta
@@ -32,6 +26,7 @@
     />
     <title>Software developer - Thandokazi Notyalwa</title>
   </head>
+
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
@@ -143,5 +138,7 @@
       </footer>
       <button onclick="topFunction()" id="top" title="Go to top">&uarr;</button>
     </div>
+
   </body>
+  
 </html>
