--- a/contact.html
+++ b/contact.html
@@ -37,18 +37,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="index.html" title="Homepage">
-          <img
-            src="images/logo.png"
-            class="logo d-none d-md-block"
-            alt="Logo"
-          />
-          <img
-            src="images/logo-small.png"
-            class="logo d-block d-md-none"
-            alt="Logo"
-          />
-        </a>
+        <a href="index.html" title="Homepage">Thando</a>
         <ul>
           <li>
             <a href="index.html" title="Homepage">Home</a>
