--- a/work.html
+++ b/work.html
@@ -31,18 +31,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="index.html" title="Homepage">
-          <img
-            src="images/logo.png"
-            class="logo d-none d-md-block"
-            alt="Logo"
-          />
-          <img
-            src="images/logo-small.png"
-            class="logo d-block d-md-none"
-            alt="Logo"
-          />
-        </a>
+        <a href="index.html" title="Homepage">Thando</a>
         <ul>
           <li>
             <a href="index.html" title="Homepage">Home</a>
@@ -67,13 +56,15 @@
         <h1 class="mb-5">I had a pleasure of working with these awesome projects!</h1>
 
         <div class="row mb-5">
-          <div class="col cot">
-            <a href="#" target="_blank">
+          <div class="col">
+            <div class="cot zoom">
+            <a href="https://www.github.com/thandokazi2000" target="_blank">
               <img src="images/Techno Champ Tours.png" class="img-fluid" alt="Tourism website preview">
               <div class="overlay">
                 <b>Tourism Website Preview</b><br>
               </div>
            </a> 
+           </div>
           </div>
           <div class="col d-none d-lg-block">
             <div class="project-description">
@@ -100,7 +91,8 @@
               <a href="work.html" class="btn btn-branding-outline">Learn more</a>
             </div>
           </div>
-          <div class="col cot">
+          <div class="col">
+          <div class="cot zoom">
             <a href="https://github.com/Thandokazi2000/Portfolio-project" target="_blank" >
               <img src="images/Portfolio.png" class="img-fluid" alt="Portfolio project preview">
               <div class="overlay">
@@ -108,16 +100,19 @@
               </div>
             </a>
           </div>
+          </div>
         </div>
 
         <div class="row mb-5">
           <div class="col">
-            <a href="#" target="_blank">
+            <div class="cot zoom">
+            <a href="https://www.github.com/thandokazi2000" target="_blank">
               <img src="images/Screenshot (1).png" class="img-fluid" alt="Decor project preview">
               <div class="overlay">
                 <b>Decor Website Preview</b><br>
               </div>
             </a> 
+            </div>
           </div>
           <div class="col d-none d-lg-block">
             <div class="project-description">
