updated contact form

--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
           </div>
       
           <div class="col-md-6">
-            <form action="" id="contact-form">
+            <form action="#" id="contact-form">
              <label for="name">Full Name *</label>
              <input type="text" placeholder="enter your name" id="name" name="user_name" oninput="validateName()" required>
              <br>
