--- a/contact.html
+++ b/contact.html
@@ -37,17 +37,16 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="index.html" title="Homepage">
-          <img
+        <a href="index.html" title="Homepage">Thandokazi</a>
+          <!--img
             src="images/logo.png"
             class="logo d-none d-md-block"
-            alt="Logo"
-          />
-          <img
+            alt="Logo"-->
+          <!--img
             src="images/logo-small.png"
             class="logo d-block d-md-none"
             alt="Logo"
-          />
+      -->
         </a>
         <ul>
           <li>
@@ -55,9 +54,6 @@
           </li>
           <li>
             <a href="about.html" title="About Thandokazi">About</a>
-          </li>
-          <li>
-            <a href="skills.html" title="My skills">Skills</a>
           </li>
           <li class="active">
             <a href="work.html" title="My work">Work</a>
