--- a/index.html
+++ b/index.html
@@ -39,25 +39,22 @@
           <li>
             <a href="about.html" title="About Thandokazi">About</a>
           </li>
-          <li>
-            <a href="skills.html" title="My skills">Skills</a>
-          </li>
           <li class="active">
             <a href="work.html" title="My work">Work</a>
           </li>
           <li>
             <a href="contact.html" title="Contact Thandokazi">Contact</a>
           </li>
-          <!-- close button-->
+          <!-- close button
           <li class="nav_close" id="nav-close">
             <i class="fa-solid fa-circle-xmark"></i>
-          </li>
+          </li-->
         </ul>
        
-        <!--Toggle button-->
+        <!--Toggle button
         <li class="nav_toggle" id="nav-toggle">
           <i class="fa-solid fa-bars"></i>
-        </li>
+        </li-->
       </div>
       </nav>
       
@@ -82,7 +79,7 @@
         <div class="col-md-4">
           <div class="col ">
           <div class="highlights">
-            <p><span class="number">5</span> Programmming Languages</p>
+            <p><span class="number">6</span> Programmming Languages</p>
             <p><span class="number">5</span> Development Tools</p>
             <p><span class="number">1</span> Year of experience</p>
           </div>
