--- a/work.html
+++ b/work.html
@@ -31,17 +31,13 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="index.html" title="Homepage">
-          <img
-            src="images/logo.png"
-            class="logo d-none d-md-block"
-            alt="Logo"
-          />
-          <img
+        <a href="index.html" title="Homepage">Thandokazi</a>
+          
+          <!--img
             src="images/logo-small.png"
             class="logo d-block d-md-none"
             alt="Logo"
-          />
+      -->
         </a>
         <ul>
           <li>
@@ -49,9 +45,6 @@
           </li>
           <li>
             <a href="about.html" title="About Thandokazi">About</a>
-          </li>
-          <li>
-            <a href="skills.html" title="My skills">Skills</a>
           </li>
           <li class="active">
             <a href="work.html" title="My work">Work</a>
@@ -142,6 +135,40 @@
           <h3>Work inquiry</h3>
           <p class="text-muted">Let's work together</p>
         </div>
+        <footer>
+          <div class="social-links text-center">
+            <a
+            href="//www.shecodes.io/certificates/e75cf4dca40ad94fe6fe6750e9a60232"
+            target="_blank"
+            title="GitHub Profile"
+            ><i class="fa-brands fa-html5"></i></a>
+            <a
+            href="https://shecodes.io/certificates/348fb8adab7e9801f1c7b93b1f20a05e"
+            target="_blank"
+            title="GitHub Profile"
+            ><i class="fa-brands fa-css3-alt"></i></a>
+            <a
+            href="https://shecodes.io/certificates/622aefaa4c2a3f5a432b5463d17ffff9"
+            target="_blank"
+            title="GitHub Profile">
+            <i class="fa-brands fa-js"></i></a>
+            <a
+            href="#"
+            target="_blank"
+            title="GitHub Profile">
+            <i class="fa-brands fa-react"></i></a>
+            <a
+            href="#"
+            target="_blank"
+            title="GitHub Profile">
+            <i class="fa-brands fa-node-js"></i></a>
+            <a
+            href="#"
+            target="_blank"
+            title="GitHub Profile">
+            <i class="fa-brands fa-python"></i></a>
+          </div>
+          </footer>
         <div>
           <a
             href="contact.html"
