--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="container">
     <nav class="d-flex justify-content-between">
-      <a href="index.html" title="Homepage">Thando</a>
+      <a href="index.html" title="Homepage">Thandokazi</a>
       <div class="show-menu" id="nav-link">
         <ul class="nav-links">
           <li>
