--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           </li-->
         </ul>
        
-        <!--Toggle button-->
+        <!--Toggle button
         <li class="nav_toggle" id="nav-toggle">
           <i class="fa-solid fa-bars"></i>
-        </li>
+        li-->
       </div>
       </nav>
       
