--- a/work.html
+++ b/work.html
@@ -62,6 +62,51 @@
         <div class="row mb-5">
           <div class="col">
             <div class="cot zoom">
+            <a href="https://664b08f656a6517aff08fac7--joyful-trifle-cbba68.netlify.app/" target="_blank">
+              <img src="images/citybiulder.png" class="img-fluid" alt="Tourism website preview">
+              <div class="overlay">
+                <b>Collaboration Website Preview</b><br>
+              </div>
+           </a> 
+           </div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <div class="project-description">
+              <h2 class="mb-5">Website Project</h2>
+              <p class="mb-4 text-muted ">
+                City Builder Collaboration website,Crafted by a dedicated team using HTML, CSS, and JavaScript, 
+                our website is a testament to our shared vision and collective effort.
+                With seamless navigation, responsive design, 
+                and interactive elements.
+              </p>
+              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col">
+            <div class="cot zoom">
+            <a href="https://skyviewweather.netlify.app/" target="_blank">
+              <img src="images/weather.png" class="img-fluid" alt="Tourism website preview">
+              <div class="overlay">
+                <b>Weather Web Application</b><br>
+              </div>
+           </a> 
+           </div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <div class="project-description">
+              <h2 class="mb-5">Website Project</h2>
+              <p class="mb-4 text-muted ">
+                Weather Application,Crafted by me using JavaScript and React.
+              </p>
+              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col">
+            <div class="cot zoom">
             <a href="https://www.github.com/thandokazi2000" target="_blank">
               <img src="images/Techno Champ Tours.png" class="img-fluid" alt="Tourism website preview">
               <div class="overlay">
