--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
             <a href="https://664b08f656a6517aff08fac7--joyful-trifle-cbba68.netlify.app/" target="_blank">
               <img src="images/citybiulder.png" class="img-fluid" alt="Tourism website preview">
               <div class="overlay">
-                <b>Collaboration Website Preview</b><br>
+                <b>Collaboration Website </b><br>
               </div>
            </a> 
            </div>
@@ -99,6 +99,29 @@
               <h2 class="mb-5">Website Project</h2>
               <p class="mb-4 text-muted ">
                 Weather Application,Crafted by me using JavaScript and React.
+              </p>
+              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col">
+            <div class="cot zoom">
+            <a href="https://github.com/marquesarendse/Banking-app3" target="_blank">
+              <img src="images/bnk.png" class="img-fluid" alt="Tourism website preview">
+              <div class="overlay">
+                <b>Banking Application </b><br>
+              </div>
+           </a> 
+           </div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <div class="project-description">
+              <h2 class="mb-5">Banking Application</h2>
+              <p class="mb-4 text-muted ">
+                Crafted by a dedicated team using Python and tkiner, 
+                our website is a testament to our shared vision and collective effort.
+                
               </p>
               <a href="work.html" class="btn btn-branding-outline">Learn more</a>
             </div>
@@ -145,7 +168,7 @@
             <a href="https://github.com/Thandokazi2000/Portfolio-project" target="_blank" >
               <img src="images/Portfolio.png" class="img-fluid" alt="Portfolio project preview">
               <div class="overlay">
-                <b>Portfolio Preview</b><br>
+                <b>Portfolio Project</b><br>
               </div>
             </a>
           </div>
@@ -158,7 +181,7 @@
             <a href="https://www.github.com/thandokazi2000" target="_blank">
               <img src="images/Screenshot (1).png" class="img-fluid" alt="Decor project preview">
               <div class="overlay">
-                <b>Decor Website Preview</b><br>
+                <b>Decor Website </b><br>
               </div>
             </a> 
             </div>
