updated home page and css

--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
           <li>
             <a href="index.html" title="Homepage">Home</a>
           </li>
-          <li>
+          <li class="active">
             <a href="about.html" title="About Thandokazi">About</a>
           </li>
-          <li class="active">
+          <li >
             <a href="work.html" title="My work">Work</a>
           </li>
           <li>
@@ -66,7 +66,7 @@
             <h1 class="mb-4">Thandokazi Notyalwa</h1>
             <h2 class="mb-4">Software Developer, based in Cape Town.</h2>
             <p class="mb-4">
-              I specialize in web development that utilizes HTML, CSS, JS and REACT etc.
+              I specialize in web development that utilizes HTML, CSS, JavaScript, Python and REACT.
               I am a highly motivated individual and external optimist dedicated to writing clear concise, 
               robust code that works, Striving to never stop learning and improving.
             </p>
