--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <a href="index.html" title="Homepage">Thandokazi</a>
         <div class="show-menu" id="nav-link">
         <ul class="nav-links">
-          <li>
+          <li class="active">
             <a href="index.html" title="Homepage">Home</a>
           </li>
           <li>
             <a href="about.html" title="About Thandokazi">About</a>
           </li>
-          <li class="active">
+          <li >
             <a href="work.html" title="My work">Work</a>
           </li>
           <li>
@@ -79,15 +79,16 @@
         <div class="col-md-4">
           <div class="col ">
           <div class="highlights">
-            <p><span class="number">6</span> Programmming Languages</p>
-            <p><span class="number">5</span> Development Tools</p>
-            <p><span class="number">1</span> Year of experience</p>
+            <p class="mb-4 text-muted"><span class="number">6</span> Programmming Languages</p>
+            <p class="mb-4 text-muted"><span class="number">5</span> Development Tools</p>
+            <p class="mb-4 text-muted"><span class="number">1</span> Year of experience</p>
           </div>
           </div>
         </div>
   
-        <div class="col-md-6">
-          <div class="project-description">
+        <div class="col-md-4">
+          <div class="col">
+            <div class="whatIDo">
             <p class="mb-4 text-muted">
               Solving complex problems and finding creative solutions are what drive me. 
               I thrive in environments where i can tackle challenges and find innovative 
@@ -96,9 +97,26 @@
               I help business grow by crafting amazing web experiences.
               If you are looking for a developer that likes to get stuff done,
             </p>
-            <a href="about.html" class="btn btn-branding-outline">See more</a>
+            <a href="work.html" class="btn btn-branding-outline1">See more</a>
+          </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="col">
+            <div class="whatIDo">
+            <p class="mb-4 text-muted">
+              Solving complex problems and finding creative solutions are what drive me. 
+              I thrive in environments where i can tackle challenges and find innovative 
+              ways to overcome them. 
+              Collaborating and achieving common goals as a team is what energizes me.
+              I help business grow by crafting amazing web experiences.
+              If you are looking for a developer that likes to get stuff done,
+            </p>
+            <a href="work.html" class="btn btn-branding-outline1">See more</a>
+          </div>
+          </div>
+        </div>
+
       </div>
 
       
