--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           <div class="col">
             <div class="whatIDo">
             <p class="mb-4 text-muted">
+              <h2>Web Application</h2>
               Solving complex problems and finding creative solutions are what drive me. 
               I thrive in environments where i can tackle challenges and find innovative 
               ways to overcome them. 
@@ -105,6 +106,7 @@
           <div class="col">
             <div class="whatIDo">
             <p class="mb-4 text-muted">
+              <h2>Websites</h2>
               Solving complex problems and finding creative solutions are what drive me. 
               I thrive in environments where i can tackle challenges and find innovative 
               ways to overcome them. 
@@ -120,7 +122,6 @@
       </div>
 
       
-
       <footer>
         <div class="social-links text-center">
           <a
