--- a/index.html
+++ b/index.html
@@ -77,26 +77,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <div class="col ">
-          <div class="highlights">
-            <p class="mb-4 text-muted"><span class="number">6</span> Programmming Languages</p>
-            <p class="mb-4 text-muted"><span class="number">5</span> Development Tools</p>
-            <p class="mb-4 text-muted"><span class="number">1</span> Year of experience</p>
-          </div>
-          </div>
-        </div>
-  
-        <div class="col-md-4">
           <div class="col">
             <div class="whatIDo">
-            <p class="mb-4 text-muted">
               <h2>Web Application</h2>
-              Solving complex problems and finding creative solutions are what drive me. 
-              I thrive in environments where i can tackle challenges and find innovative 
-              ways to overcome them. 
-              Collaborating and achieving common goals as a team is what energizes me.
-              I help business grow by crafting amazing web experiences.
-              If you are looking for a developer that likes to get stuff done,
+            <p class="mb-4 ">
+              I design web applications that provide a wide range of 
+              functionalities and services to users across different devices, 
+              enabling businesses and organizations 
+              to deliver interactive and engaging experiences over the web.
             </p>
             <a href="work.html" class="btn btn-branding-outline1">See more</a>
           </div>
@@ -105,14 +93,25 @@
         <div class="col-md-4">
           <div class="col">
             <div class="whatIDo">
-            <p class="mb-4 text-muted">
-              <h2>Websites</h2>
-              Solving complex problems and finding creative solutions are what drive me. 
-              I thrive in environments where i can tackle challenges and find innovative 
-              ways to overcome them. 
-              Collaborating and achieving common goals as a team is what energizes me.
-              I help business grow by crafting amazing web experiences.
-              If you are looking for a developer that likes to get stuff done,
+              <h2>UI/UX Design </h2>
+            <p class="mb-4">
+               I design UI/UX that prioritizes user satisfaction and efficiency. 
+               By focusing on intuitive design principles and seamless navigation, 
+               I aim to enhance the overall usability and functionality of products. 
+               Creating intuitive experiences that align with user expectations.
+            </p>
+            <a href="work.html" class="btn btn-branding-outline1">See more</a>
+          </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="col">
+            <div class="whatIDo">
+              <h2>Database </h2>
+            <p class="mb-4">
+              I specialize in designing and optimizing databases to ensure efficient data management and retrieval. 
+               My focus is on creating robust database architectures that support scalability, performance, 
+               and data integrity, enabling seamless operations and informed decision-making.
             </p>
             <a href="work.html" class="btn btn-branding-outline1">See more</a>
           </div>
