--- a/about.html
+++ b/about.html
@@ -66,10 +66,11 @@
             <h1 class="mb-4">Thandokazi Notyalwa</h1>
             <h2 class="mb-4">Software Developer, based in Cape Town.</h2>
             <p class="mb-4">
-              I specialize in web development that utilizes HTML, CSS, JavaScript, Python and REACT.
-              I am a highly motivated individual and external optimist dedicated to writing clear concise, 
-              robust code that works, Striving to never stop learning and improving.
-            </p>
+              I specialize in web development using HTML, CSS, JavaScript, Python, Node.js and React, 
+              with proficiency in MySQL, SQL, and MongoDB. Additionally, 
+              I have a keen eye for UI/UX design principles, ensuring user-friendly and visually appealing interfaces. 
+              Currently, I am gaining valuable experience as a full stack intern at CAPACITI, 
+              where I am honing my skills across the entire development stack.
             <p class="mb-5">
               Solving complex problems and finding creative solutions are what drive me.
               I thrive in environments where i can tackle challenges and find innovative 
