--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
               I specialize in web development using HTML, CSS, JavaScript, Python, Node.js and React, 
               with proficiency in MySQL, SQL, and MongoDB. Additionally, 
               I have a keen eye for UI/UX design principles, ensuring user-friendly and visually appealing interfaces. 
-              Currently, I am gaining valuable experience as a full stack intern at CAPACITI, 
+              Currently, I am gaining valuable experience as a full stack Candidate at CAPACITI, 
               where I am honing my skills across the entire development stack.
             <p class="mb-5">
               Solving complex problems and finding creative solutions are what drive me.
